--- a/content/styles/style.css
+++ b/content/styles/style.css
@@ -88,11 +88,124 @@ section{
     font-weight: 500;
 }
 .socialmedia img{
-    width: 25px;
-    height: 25px;
+    width: 50px;
+    height: 50px;
 }
 .socialmedia{
+    width: 400px;
+    height: 400px;
     padding: 25px 25px;
     display: flex;
     justify-content: space-between;
+}
+/* Responsive adjustments */
+@media (max-width: 1024px) {
+    section {
+        padding: 30px;
+    }
+
+    header {
+        padding: 10px 30px;
+    }
+
+    .nav a {
+        padding: 10px;
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 30px 50px;
+    }
+.profiel__pic{
+    width: 200px;
+    height:200px;
+}
+    .profiel__pic  img{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        width: 200px;
+        height: 200px;
+    }
+
+    .disc h1 {
+        font-size: 2em;
+    }
+
+    .disc h2 {
+        font-size: 1.5em;
+    }
+
+    .disc p {
+        font-size: 1.2em;
+    }
+
+    .socialmedia {
+        justify-content: center;
+        padding: 20px 0;
+    }
+
+    .socialmedia img {
+        width: 40px;
+        height: 40px;
+    }
+    .compin__div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav a {
+        font-size: 0.9em;
+        padding: 8px;
+    }
+
+    section {
+        padding: 20px;
+    }
+
+    header {
+        padding: 10px 20px;
+        flex-direction: column;
+    }
+
+    .logo {
+        font-size: 1.2em;
+    }
+
+    .profiel__pic {
+        width: 150px;
+        height: 150px;
+    }
+    .profiel__pic img{
+        height: 100%;
+        width: 100%;
+    }
+
+    .disc h1 {
+        font-size: 1.8em;
+    }
+
+    .disc h2 {
+        font-size: 1.2em;
+    }
+
+    .disc p {
+        font-size: 1em;
+    }
+
+    .socialmedia img {
+        width: 35px;
+        height: 35px;
+    }
 }
