--- a/content/styles/about.css
+++ b/content/styles/about.css
@@ -49,7 +49,7 @@ header{
     "tech lang"
     ;
     padding: 15px 30px;
-    background-image: url(/content/Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
+    background-image: url(../Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
