--- a/content/styles/projects.css
+++ b/content/styles/projects.css
@@ -41,7 +41,7 @@ header{
 .main{
     width: 100%;
     min-height: 100vh;
-    background-image: url(/content/Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
+    background-image: url(../Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
