--- a/content/styles/style.css
+++ b/content/styles/style.css
@@ -45,7 +45,7 @@ section{
     width: 100%;
     min-height: 100vh;
     display: flex;
-    background-image: url(/content/Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
+    background-image: url(../Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
