--- a/content/styles/projects.css
+++ b/content/styles/projects.css
@@ -41,7 +41,6 @@ header{
 .main{
     width: 100%;
     min-height: 100vh;
-    background-image: url(../Photos/vecteezy_abstract-blue-background-simple-design-for-your-website_6852804.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -167,7 +166,23 @@ header{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+
 }
+#project-details {
+    border: 1px solid #ccc;
+    padding: 20px;
+    position: fixed;
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    z-index: 1000;
+    display: none;
+}
+
+
 @media (max-width: 768px) {
     header {
         flex-direction: column;
